--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,25 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="header">
+      <h1><%= link_to "Sample Blog", root_path %></h1>
+      <nav class="navigation">
+        <li><%=link_to "Home", root_path %></li>
+        <li><%=link_to "About", posts_about_path %></li>
+        <li><%=link_to "Contact", posts_contact_path %></li>
+      </nav>
+    </header>
+    <div class="container-fluid">
+        <%= yield %>
+    </div>
+    <div class="footer">
+      
+      <nav class="navigation">
+        <li><%=link_to "Home", root_path %></li>
+        <li><%=link_to "About", posts_about_path %></li>
+        <li><%=link_to "Contact", posts_contact_path %></li>
+      </nav>
+      <p>Built by <span id="name">Theophile Kango</span> &copy 2020</p> 
+    </div>
   </body>
 </html>
