--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -37,8 +37,11 @@ $grey: #ddd;
 .header{
     display: flex;
     background: $font-color;
+    width: 100%;
     height: 50px;
     align-items: center;
+    position: fixed;
+    top: 0;
     h1 {
         font-size: 2em;
         margin-left: 50px;
@@ -59,6 +62,8 @@ $grey: #ddd;
 .footer{
     background: $black;
     display: flex;
+    position: fixed;
+    bottom: 0;
     flex-direction: column;
     align-items: center;
     color: $white;
@@ -69,4 +74,42 @@ $grey: #ddd;
         @include list
     }
 
+}
+
+.new_post{
+    background: $grey;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    margin: 10px;
+    label{
+        font-size: 1.2em;
+    }
+    input[type=text], 
+    #post_content
+    {
+        padding: 10px;
+        font-size: 1.2em;
+        margin-bottom: 20px;
+    }
+    #post_content{
+        height: 100px;
+    }
+    input[type=submit]{
+        background: $font-color;
+        border: none;
+        color: $white;
+        height: 30px;
+        width: 20%;
+    }
+}
+.content{
+    margin: 50px;
+}
+.post{
+    background: $grey;
+    padding: 10px;
+    p{
+        font-size: 1.5em;
+    }
 }
