--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render 'header' %>
-    <div class="container-fluid">
+    <div class="container-fluid content">
         <%= yield %>
     </div>
     <%= render 'footer' %>
