--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Home</h1>
+<%= content_for :page_title, "Home" %>
+<% @post.each do |post| %>
+    <h1><%= link_to post.title, post %></h1>
+    <div class="post">
+        <p><%= post.content %></p>
+    </div>
+<% end %>
+<p id="count">We have<%= @post.count %> posts</p>
+
