--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,13 @@
-
-<h1><%= @post.title %></h1>
+<%= content_for :page_title, "View Post" %>
+<h2><%= @post.title %></h2>
 <div class="post">
     <p><%= @post.content%></p>
+    <div class="edit-delete">
+        <button id="edit"><%= link_to "Edit", edit_post_path(@post) %></button>
+        <button id="delete">
+        <%= link_to "Delete", post_path(@post), 
+        method: :delete, data: { confirm: "Are you sure ?" } %>
+        </button>
+    </div>
+    <h3><%=link_to "Back", root_path %></h3>
 </div>
