Added comment model and added the relation with post model

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,5 +5,5 @@
         <p><%= post.content %></p>
     </div>
 <% end %>
-<p id="count">We have<%= @post.count %> posts</p>
+<p class="count">We have<%= @post.count %> posts</p>
 
