--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,6 +7,7 @@ $green: green;
 $white: white;
 $black: rgb(51, 48, 48);
 $grey: #ddd;
+$red: rgb(219, 8, 8);
 
 @mixin hover-color {
     border: 1px solid $green;
@@ -34,6 +35,17 @@ $grey: #ddd;
     }
 }
 
+@mixin delete {
+    width: 150px;
+    height: 30px;
+    border: none;
+    margin: 20px;
+    a{
+        color: $white;
+        text-decoration: none;
+    }
+}
+
 .header{
     display: flex;
     background: $font-color;
@@ -55,7 +67,7 @@ $grey: #ddd;
         display: flex;
         justify-content: flex-end;
         width: 80%;
-        @include list
+        @include list;
     }
 }
 
@@ -77,7 +89,8 @@ $grey: #ddd;
 }
 
 .new_post,
-.edit_post{
+.edit_post,
+.new_comment{
     background: $grey;
     display: flex;
     flex-direction: column;
@@ -87,13 +100,15 @@ $grey: #ddd;
         font-size: 1.2em;
     }
     input[type=text], 
-    #post_content
+    #post_content,
+    #comment_comment
     {
         padding: 10px;
         font-size: 1.2em;
         margin-bottom: 20px;
     }
-    #post_content{
+    #post_content,
+    #comment_comment{
         height: 100px;
     }
     input[type=submit]{
@@ -107,6 +122,9 @@ $grey: #ddd;
 .content{
     margin: 50px;
 }
+#back{
+    margin-bottom: 50px;
+}
 .post{
     background: $grey;
     padding: 10px;
@@ -115,29 +133,28 @@ $grey: #ddd;
     }
 }
 
-.edit-delete{
+.edit-delete
+{
     display: flex;
     justify-content: flex-end;
     #edit,
     #delete {
-        width: 150px;
-        height: 30px;
-        border: none;
-        margin: 20px;
-        a{
-            color: $white;
-            text-decoration: none;
-        }
+        @include delete;
     }
     #edit{
         background: $font-color;
     }
     #delete{
-        background: rgb(219, 8, 8);
+        background: $red;
     }
 }
+.post #delete{
+    background: $red;
+    @include delete;
+}
 
-#count{
+
+.count{
     padding: 20px;
     color: $green;
 }
