--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,5 +9,11 @@
         method: :delete, data: { confirm: "Are you sure ?" } %>
         </button>
     </div>
-    <h3><%=link_to "Back", root_path %></h3>
 </div>
+<div class="comment">
+    <h3 class="count"><%= @post.comments.count %> comments</h3>
+    <h2>Add a comment</h2>
+    <%= render @post.comments %>
+    <%= render "comments/form" %>
+</div>
+<h3 id="back"><%=link_to "Back", root_path %></h3>
