--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,6 +2,7 @@
 <h2><%= comment.name %></h2>
 <div class="post">
     <p><%= comment.comment %></p>
+    <small>commented on <%= comment.created_at %></small><br>
     <button id="delete">
         <%= link_to "Delete", [comment.post, comment], 
         method: :delete, data: { confirm: "Are you sure ?" } %>
