--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,9 @@
 <%= form_for([@post, @post.comments.build]) do |f| %>
+    <ul>
+        <% @post.errors.full_messages.each do |error| %>
+            <li><%= error %></li>
+        <% end %>
+    </ul>
     <%= f.label :name %>
     <%= f.text_field :name %>
     <%= f.label :comment %>
