--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
 <h2><%= @post.title %></h2>
 <div class="post">
     <p><%= @post.content%></p>
+    <small>posted on <%= @post.created_at %></small>
     <div class="edit-delete">
         <button id="edit"><%= link_to "Edit", edit_post_path(@post) %></button>
         <button id="delete">
@@ -11,7 +12,7 @@
     </div>
 </div>
 <div class="comment">
-    <h3 class="count"><%= @post.comments.count %> comments</h3>
+    <h3 class="count"><%= pluralize(@post.comments.count, "comment") %></h3>
     <h2>Add a comment</h2>
     <%= render @post.comments %>
     <%= render "comments/form" %>
