--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,5 +8,7 @@
     <%= f.text_field :title %>
     <%= f.label :content %>
     <%= f.text_area :content %>
+    <%= f.label :tag_list %><br />
+    <%= f.text_field :tag_list %>
     <%= f.submit %>
 <% end %>
