--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -134,11 +134,25 @@ $red: rgb(219, 8, 8);
 #back{
     margin-bottom: 50px;
 }
+
 .post{
     background: $grey;
     padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
     p{
         font-size: 1.5em;
+    }
+    .text{
+        width: 70%;
+        margin-left: 10px;
+    }
+    .image{
+        width: 28%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
