--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post do |f| %>
+<%=  form_for(@post, html: {multipart: true}) do |f|  %>
     <ul>
         <% @post.errors.full_messages.each do |error| %>
             <li><%= error %></li>
@@ -8,7 +8,12 @@
     <%= f.text_field :title %>
     <%= f.label :content %>
     <%= f.text_area :content %>
-    <%= f.label :tag_list %><br />
+    <%= f.label :tag_list %>
     <%= f.text_field :tag_list %>
+    <% if @post.image.exists? %>
+        <%= image_tag @post.image.url %><br/>
+    <% end %>
+    <%= f.label :image, "Attach a New Image" %><br />
+    <%= f.file_field :image %>
     <%= f.submit %>
 <% end %>
