--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,10 @@
 <%= content_for :page_title, "Comment" %>
 <h2><%= comment.name %></h2>
 <div class="post">
-    <p><%= comment.comment %></p>
-    <small>commented on <%= comment.created_at %></small><br>
+    <div>
+        <p><%= comment.comment %></p>
+        <small>commented on <%= comment.created_at %></small><br>
+    </div>
     <button id="delete">
         <%= link_to "Delete", [comment.post, comment], 
         method: :delete, data: { confirm: "Are you sure ?" } %>
