--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -9,4 +9,5 @@
     <%= f.label :comment %>
     <%= f.text_area :comment %>
     <%= f.submit %>
+    <%= link_to 'create user', authors_path %>
 <% end %>
