--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
         <p><%= post.content %></p>
     </div>
 <% end %>
+<p id="new-user" ><%= link_to 'New user', new_author_path %></p>
 
 <p class="count">We have <%= @post.count %> posts</p>
 
