--- a/app/views/posts/_header.html.erb
+++ b/app/views/posts/_header.html.erb
@@ -4,5 +4,11 @@
         <li><%=link_to "New", new_post_path %></li>
         <li><%=link_to "About", posts_about_path %></li>
         <li><%=link_to "Contact", posts_contact_path %></li>
+        <% if logged_in? %>
+            <% # "Logged in as #{current_user.email}" %>
+            <li><%= link_to "(logout)", logout_path %></li>
+        <% else %>
+            <li><%= link_to "(login)", login_path %></li>
+        <% end %>
     </nav>
 </header>
