Hide the delete button in comment for no logged in users

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,8 +5,10 @@
         <p><%= comment.comment %></p>
         <small>commented on <%= comment.created_at %></small><br>
     </div>
-    <button id="delete">
-        <%= link_to "Delete", [comment.post, comment], 
-        method: :delete, data: { confirm: "Are you sure ?" } %>
-    </button>
+    <% if logged_in? %>
+        <button id="delete">
+            <%= link_to "Delete", [comment.post, comment], 
+            method: :delete, data: { confirm: "Are you sure ?" } %>
+        </button>
+    <% end %>
 </div>
